# aou_pheno_cc

./: .gitignore  AGENTS.md  AllOfUs_Phenotypes_CC.md  README.md  pyproject.toml
src/aou_pheno_cc/: __init__.py
src/aou_pheno_cc/cli/: createphenodb.py  createphenotypes.py  xls2json.py
tests/: test_createphenotypes.py  test_xls2json.py
