[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aou-pheno-cc"
version = "0.1.0"
description = "All of Us case-control phenotype tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Florian Zink"}]
license = {text = "MIT"}
dependencies = [
  "pandas>=1.5",
  "google-cloud-bigquery>=3.10",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
]

[project.scripts]
aou-createphenodb = "aou_pheno_cc.cli.createphenodb:main"
aou-xls2json = "aou_pheno_cc.cli.xls2json:main"
aou-createphenotypes = "aou_pheno_cc.cli.createphenotypes:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
